<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/assignment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- App Bar Layout, Toolbar, Buttons -->

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize">

                <Button
                    android:id="@+id/cancel_create_assignment"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:background="@android:color/transparent"
                    android:text="@string/cancel_button_text"
                    android:textAllCaps="false"
                    android:textColor="@color/fab_color_blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/create_assignment_title"
                    android:textColor="#212121"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/save_create_assignment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:text="@string/save_button_text"
                    android:visibility="invisible"
                    android:textAllCaps="false"
                    android:textColor="@color/fab_color_blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.AppBarLayout>


        <include
            layout="@layout/layout_create_assignment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>