<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize">


                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/MyDashboard_title"
                    android:textColor="#212121"
                    android:textSize="20dp" />

            </android.support.v7.widget.Toolbar>


            <android.support.design.widget.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:visibility="gone"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/fab_color_blue"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/fab_color_blue"
                app:tabTextAppearance="@style/MyCustomTextAppearance"
                app:tabTextColor="#212121" />
        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!-- The navigation drawer -->

    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#333333"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/profile_navigationDrawer"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgProfilePic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:src="@drawable/user_profile" />

            <TextView
                android:id="@+id/lblUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:text="@string/user_name_navigationDrawer"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#EEEEEE" />

        </LinearLayout>


        <ListView
            android:id="@+id/drawerList"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#333333"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp" />

        <TextView
            android:id="@+id/versionName"
            android:layout_gravity="bottom|center"
            android:layout_height="20dp"
            android:layout_width="wrap_content"
            android:text="@string/app_version_name"
            android:textSize="16sp"
            android:textColor="#ababab"
            android:layout_marginBottom="50dp"
            />

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>